--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.4",
     "nodemon": "^1.18.9",
+    "path": "^0.12.7",
     "session": "^0.1.0"
   }
 }
